# assignment1-basics-bpe

./: .gitignore  .gitmodules  pyproject.toml  setup.py
cppstep2/: CMakeLists.txt  bpe_train_step2.cpp  bpe_train_step2.h  max_heap.h
cppupdate/: CMakeLists.txt  bpe_train_step2.cpp  bpe_train_step2.h  bpe_train_updater.cpp  bpe_train_updater_emhash8.cpp  bpe_train_updater_fine_grained.cpp  bpe_train_updater_fine_grained_absl.cpp  bpe_train_updater_fine_grained_emhash8.cpp  bpe_train_updater_fine_grained_emhash8_set.cpp  bpe_train_updater_fine_grained_emhash8_set9.cpp  bpe_train_updater_fine_grained_heap.cpp  bpe_train_updater_fine_grained_heap_emhash8.cpp  bpe_train_updater_fine_grained_heap_emhash8_opt.cpp  bpe_train_updater_fine_grained_heap_emhash8_set.cpp  bpe_train_updater_fine_grained_heap_emhash8_set9.cpp  bpe_train_updater_fine_grained_heap_emhash8_set9_opt.cpp  bpe_train_updater_fine_grained_heap_emhash8_set_opt.cpp  bpe_train_updater_fine_grained_heap_opt.cpp  bpe_train_updater_hash.cpp  bpe_train_updater_max_debug.cpp  bpe_train_updater_omp_v1.cpp  bpe_train_updater_omp_v1_hash.cpp  bpe_train_updater_omp_v2.cpp  bpe_train_updater_omp_v2_debug.cpp  bpe_train_updater_omp_v2_hash.cpp  bpe_train_updater_omp_v2_hash2.cpp  bpe_train_updater_omp_v3.cpp  bpe_train_updater_omp_v3_hash.cpp  bpe_train_updater_omp_v3_max_debug.cpp  bpe_train_updater_omp_v4.cpp  bpe_train_updater_omp_v4_debug.cpp  bpe_train_updater_omp_v5.cpp  bpe_train_updater_omp_v6.cpp  bpe_train_updater_omp_v7.cpp  bpe_train_updater_omp_v8.cpp  bpe_train_updater_opt.cpp  bpe_train_updater_opt_absl.cpp  bpe_train_updater_opt_emhash8.cpp  bpe_train_updater_opt_emhash8_hash.cpp  max_heap.cpp  (+3 more)
cs336_basics/: _maxheapqmodule.c  bpe_train_step2_wrapper.cpp  bpe_train_step2_wrapper.pxd  bpe_train_step2_wrapper.pyx  bpe_updater.pyx  bpe_updater_v2.pyx  bpe_v10.py  bpe_v11.py  bpe_v11_bytes.py  bpe_v11_v2.py  bpe_v11_v3.py  bpe_v11_v3_bytes.py  bpe_v11_v4.py  bpe_v11_v4_bytes.py  bpe_v1_time.py  bpe_v2.py  bpe_v2_time.py  bpe_v2_time_pypy.py  bpe_v3.py  bpe_v3_bug.py  bpe_v3_bytes_time.py  bpe_v3_condition_bug.py  bpe_v3_step1_result.py  bpe_v4.py  bpe_v4_mp.py  bpe_v4_mp_deepcopy_time.py  bpe_v4_mp_spawn_time.py  bpe_v4_mp_time.py  bpe_v4_time.py  bpe_v4_time2.py  bpe_v5.py  bpe_v5_time.py  bpe_v6.py  bpe_v6_time.py  bpe_v7_heapify.py  bpe_v7_maxheapc.py  bpe_v7_maxheapc_opt.py  bpe_v7_maxheapc_opt_time.py  bpe_v7_maxheapc_time.py  bpe_v7_opt.py  (+25 more)
tests/: adapters.py  conftest.py  test_train_bpe.py
